
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#3740] Add proxy support to modTransportPackage.class.php
- [#3693] Fix reversed content-disposition logic on static resources
- [#3427] Fix issue where User Settings were not respected with filemanager_path/url
- [#3702] Ensure file/image TVs can have files drag/dropped onto them
- [#3465] Add sanity check for non-object to log call in modAccessibleObject::_loadInstance
- [#3615] Fix issue with modx->user->getResourceGroups, set resource groups in "modx.user.{$id}.resourceGroups" session key
- [#3568] Fix double error->failure reference in resource/create processor
- [#3425] MODx.Browser now loads directory of TV's current value on load
- [#3481], [#3571], [#3304], [#3569] Fix issue with filemanager_path in non-web contexts 
- [#3009] Add ability to assign TVs to specific directories and base paths, limit file extensions shown
- [#2679] Add Input Options to TVs, allowing TV inputs to be customized and tweaked

MODx Revolution 2.0.7-pl (January 14, 2011)
====================================
- [#3472] Fix issue due to tree impr that prevented element saving success response
- Improve loading of mgr pages by preventing trees from rendering until activated
- [#3205] FC fixes: Ensure Resource Content field can have values set/renamed, that rules on create respect template, and that default values on create are set
- [#3165] Fix issue where resource/updatefromgrid processor was missing published value if user does not have publish permission
- [#2] Fix issue in user extended fields where subkeys in 2 separate containers DOM IDs conflict and prevent editing
- [#3422], [#3374], [#3197] Fix issue with filemanager_url and Image/File TVs and their relative end result URLs
- [#3201], [#177] Add modResource.leaveGroup, modTemplate.hasTemplateVar, modTemplateVar.hasTemplate