@@ -318,7 +318,19 @@ $_lang['quick_update_template'] = 'Quick Update Template';
 $_lang['quick_update_tv'] = 'Quick Update TV';
 $_lang['recent_docs'] = 'Recent documents';
 $_lang['redirecting'] = 'Redirecting...';
+$_lang['refresh_action_map'] = 'Clearing the Action map cache';
+$_lang['refresh_auto_publish'] = 'Processing automatic publishing dates';
+$_lang['refresh_context_settings'] = 'Regenerating the context caches';
+$_lang['refresh_db'] = 'Clearing the database result set cache';
+$_lang['refresh_default'] = 'Clearing the default cache';
+$_lang['refresh_failure'] = 'Refresh failed! (NOTE: this cache partition may just be empty)';
+$_lang['refresh_lexicon_topics'] = 'Clearing the lexicon topics cache';
+$_lang['refresh_menu'] = 'Clearing the menu cache';
 $_lang['refresh_published'] = '<strong>[[+num]]</strong> documents were published.';
+$_lang['refresh_resource'] = 'Clearing the Resource cache';
+$_lang['refresh_scripts'] = 'Clearing the Snippet/Plugin script cache';
+$_lang['refresh_success'] = 'Refresh successful!';
+$_lang['refresh_system_settings'] = 'Regenerating system settings cache';
 $_lang['refresh_title'] = 'Refresh site';
 $_lang['refresh_tree'] = 'Refresh tree';
 $_lang['refresh_unpublished'] = '<strong>[[+num]]</strong> documents were unpublished.';
